Implementation of GAS stress model as a plugin (#23)
* Add initial gas stress plug-in

This represents the initial gas action -- it applies stress to agents.

1) Kind of clunky
2) Can't be configured.

* Add stress demo

This is a variation of the periodic demo but with stress added.

* Add stress plugin to linux build

Add the appropriate cmake infrastructure.

* Correct linux compatibility

Account for file case and use proper linux-compatible directory slashes.

* Cosmetics clean up

Scrubbed code documentation.  Made sure it was of appropriate format and
confirmed that the comments actually referred to this code (as opposed
to the source it was copied from.)

* New stress action architecture

Whole new system for accumulating stress.

1) BaseStressAction is responsible for registering agents with the manager,
   handling exit behavior, defining the stress vector.
   a) Sub-class it to apply different stress functions to agents.
2) Stress functions define how stress is defined.  This includes a single
   kind of stress function: timed stress function.  Stress simply accumulates
   at a linear rate up to 100% stress.

Removed old action, re-wired manager, modified sample scenarios.

WIP: In release mode, it arbitrarily crashes.  I need to figure out why
     that is.

* Modify stress enumeration access to match C++ access

I had used C# style accessors (e.g., EnumName::EnuMValue).  Visual studio
is content with this, but G++ gets cranky.

* Correct include path to be linux compatible

I had backslashes that needed to be forward.

* Improve attribute set parsing warning messages

If a distribution is expected to be read and it is not found, the warning
message now includes the prefix.

* Added missing lock to manager

Because the manager gets executed in parallel (agents can enter and exit)
it is important that the underlying hash map be protected.  Introduced a
readers/writer lock to allow multiple readers

--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -1,3 +1,27 @@
+Release 0.8.2
+	October 17, 2016
+	
+	New Features
+		Added new plugin: StressGAS
+			Action for inducing stress upon agents.  Provided two examples: time based and distance based with corresponding examples.
+		Added project for VS2013
+		Added navigation mesh agent placement.  For multi-layered navigation meshes, a 2D position can be placed on specific polygon groups (rather than the top-down projection default behavior.)  This allows for population of multiple overlapping layers.
+		Refactored Goals to use a common region class and operations.
+		
+	Clean up
+		Graph parsing made more verbose; errors in the graph now write to the log and program exits gracefully.
+		Obstacles
+			Removed unused "boundingbox" attribute in XML obstacle definition.
+			Open obstacles are now rejected.
+		Fixed .gitignore to properly ignore VS2005 build artifacts
+		
+	Bugs
+		NavMesh spatial query uses agent polygon position to search for polygons; previously it ignored this information and would, in some cases, produce incorrect sets of neigbhor obstacles.
+		Fixed bug which prevented scb creation in linux
+	
+
+----------------------------------------------------------------
+
 Release 0.8.1
 	November 2, 2014
 	Corrected run example scripts for windows and linux
