--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -2,7 +2,12 @@
 
 Release 0.9.0
 	February 11, 2017
-	
+
+	Compilers - tested against:
+		Visual Studio 2013
+		clang++ 3.8.0
+		g++ 5.4.0
+		
 	New Features
 		Removed Visual Studio 2005 Solutions
 		Significant rearchitecture of the MengeCore library
@@ -14,7 +19,9 @@ Release 0.9.0
 			All includes are relative to the root Menge source directory.
 			And more...
 		Added 64-bit build to the Visual Studio 2013 project
-		
+		Added explicit make rules for compling against clang (e.g.:
+					make debug-clang
+					make release-clang
 
 ----------------------------------------------------------------
 
