--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -1,5 +1,10 @@
 ----------------------------------------------------------------
 
+	Bugs
+		Fixed the watermark references. Examples now correctly displaly Menge logo as a watermark.
+
+----------------------------------------------------------------
+
 Release 0.9.0
 	February 11, 2017
 
