--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -1,6 +1,29 @@
 ----------------------------------------------------------------
+Release 0.9.1
+	????, ??, 2017
 
+	Features
+		Added docs and build targets for the docs to the source.
+		License updated to unrestricted Apache 2 license.
+		Added preliminary (and still somewhat buggy) GCF agent implementation.
+		Added VS 2015 project
+			- included re-organization of builds,
+			- change from SDL1.2 to SDL2
+			- Removal of explicit libpng dependency.
+		Augmented the event system
+			- Added ExternalEventTrigger; a trigger object that can be exposed to external code to
+			  trigger events.
+			- Added EventEffectAgentState; an event effect that will change the state of target
+			  agents.
+			- Added TargetAgentById; an event target for a single agent identified by its unique id.
+			- Augmented the viewer to detect external triggers and connect keyboard and mouse
+			  events to them.  For details see src/Menge/MengeVis/Runtime/EventInjectContext.h
+			- Added new example exercising this functionality: examples/core/userEvent.xml. A single
+			  agent placed in a diamond-shaped environement. The arrow keys control what direction
+			  the agent moves (one of the four cardinal directions).
+			- Exposed external triggers in the C-API.
 	Bugs
+		Updated build instructions in README.md
 		Fixed the watermark references. Examples now correctly displaly Menge logo as a watermark.
 
 ----------------------------------------------------------------
