--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -1,6 +1,14 @@
 ----------------------------------------------------------------
+Release 0.9.2
+	???? ??, 2017
+	
+	Features
+		Moved `ProjectSpec` out of main menge application and into core library
+			- facilitates parsing projects in arbitrary contexts.
+
+----------------------------------------------------------------
 Release 0.9.1
-	????, ??, 2017
+	April 23, 2017
 
 	Features
 		Added docs and build targets for the docs to the source.
