--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -5,6 +5,8 @@ Release 0.9.2
 	Features
 		Moved `ProjectSpec` out of main menge application and into core library
 			- facilitates parsing projects in arbitrary contexts.
+			- Corrected relationship between command-line parameters and project specification.
+			- Added documentation to describe the project specification/command-line configuration.
 		Fixed visualization to use a right-handed frame (with z-up).
 			- this is significant because, previously, the agents were defined in an x-y plane that
 			was being inverted in the visualizer making visual interpretation difficult. Now the
