--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -22,6 +22,8 @@ Release 0.9.2
 			- "weighted" profile selector. Assigns a profile to a newly created agent by drawing a
 			profile from a *weighted* set. The probability of selecting a particular profile is
 			proportional to its relative weight in the set.
+			- Adds a new demo (profileSelect) to illustrate how to use the new selectors.
+
 	Bugs
 		VelCompRoadmap would allow agents to get stuck if they were pushed far enough away from 
 		their path. Fixed is to detect this happening and replanning.
