--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -1,6 +1,6 @@
 ----------------------------------------------------------------
 Release 0.9.2
-	???? ??, 2017
+	???? ??, 2018
 	
 	Features
 		Moved `ProjectSpec` out of main menge application and into core library
@@ -17,6 +17,7 @@ Release 0.9.2
 	Bugs
 		VelCompRoadmap would allow agents to get stuck if they were pushed far enough away from 
 		their path. Fixed is to detect this happening and replanning.
+		Minor patch in EventEffectAgentStateFactory; corrected error messages.
 
 ----------------------------------------------------------------
 Release 0.9.1
