--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -1,4 +1,12 @@
 ----------------------------------------------------------------
+Release 0.9.3
+    ???? ??, 2018
+
+    Bug fixes
+        OBBShape had inconsistent definitions for getXBasis() and getYBasis().
+            Documentation clarified, usage unified.
+
+----------------------------------------------------------------
 Release 0.9.2
 	May 28, 2018
 	
