Update event trigger based on state population
 - Removes the old StatePopIncreaseTrigger (and factory); it was a one
   trick pony.
 - Add the new StatePopulationTrigger that does what the old trigger did.
   In addition, it can do other things.
 - Update examples to make use of the replacement trigger.
 - add new examples for the new trigger.

NOTE: This does not provide unit tests.

--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -5,6 +5,11 @@ Release 0.9.3
     Bug fixes
         OBBShape had inconsistent definitions for getXBasis() and getYBasis().
             Documentation clarified, usage unified.
+	
+	Features
+		State population event trigger - upgrade the event triggers that depend on state population.
+			- replace old, single-behavior trigger with single multi-behavior trigger.
+			- Update examples (organization and invocaiton) for new trigger.
 
 ----------------------------------------------------------------
 Release 0.9.2
