--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -9,7 +9,8 @@ Release 0.9.3
 	Features
 		State population event trigger - upgrade the event triggers that depend on state population.
 			- replace old, single-behavior trigger with single multi-behavior trigger.
-			- Update examples (organization and invocaiton) for new trigger.
+			- Update examples (organization and invocation) for new trigger.
+		Change state event effect - the result of an event moves target agents into a target state.
 
 ----------------------------------------------------------------
 Release 0.9.2
