Adding movable goals
This allows goals to move w.r.t. time.

1. VelComponent base class provides mechanism for handling moving goals.
2. It is invoked by the state prior to calling setPrefVelocity
3. SimulatorBase and SimulatorInterface now integrate goal positions
   - Currently takes a timestep -- that may not be ideal.
   - FSM, GoalSet, and Goal have the supporting infrastructure for
     advancing goal position.
4. Adds a moving goal ("path" goal). It moves along a specified, piecewise
   linear path.
5. Adds a "path_goal" example illustrating the path goal.
   - adds two paths: one closed and one open. Agents head to them with a
     "goal" velocity component.
   - Add another path that an agent moves towards on a roadmp.
6. Update visualization; path goal can draw its goal geometry.
7. Updated road map vel component to update based on goal movement.
8. Updated nav mesh vel component to update based on goal movement.

--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -1,6 +1,6 @@
 ----------------------------------------------------------------
 Release 0.9.3
-    ???? ??, 2018
+    ???? ??, 2019
 
     Bug fixes
         OBBShape had inconsistent definitions for getXBasis() and getYBasis().
@@ -13,6 +13,11 @@ Release 0.9.3
 			- replace old, single-behavior trigger with single multi-behavior trigger.
 			- Update examples (organization and invocation) for new trigger.
 		Change state event effect - the result of an event moves target agents into a target state.
+		Moving goals
+		    - Goals can now move w.r.t. time.
+			- Infrastructure in BFSM and VelComponents now support the abstract idea of moving
+			  goals.
+			- Added an example of a moving goal the PathGoal.
 		
 	Miscellaneous
 		Introduce clang-format specification and clang-format everything.
